--- a/src/R/pcgrr2/NAMESPACE
+++ b/src/R/pcgrr2/NAMESPACE
@@ -10,7 +10,7 @@ export(get_clinical_associations_civic_cbmdb)
 export(postprocess_vranges_info)
 export(generate_report_data)
 export(generate_pcg_report)
-export(cnv_segment_annotation)
+export(cna_segment_annotation)
 export(filter_db_germline_variants)
 export(assign_poplevel_frequency)
 export(generate_biomarker_tsv)
