--- a/src/R/pcgrr2/NAMESPACE
+++ b/src/R/pcgrr2/NAMESPACE
@@ -16,4 +16,9 @@ export(assign_poplevel_frequency)
 export(generate_biomarker_tsv)
 export(signature_contributions_single_sample)
 export(generate_tier_tsv)
+export(predict_msi_status)
+export(get_cna_cytoband)
+export(df_string_replace)
+export(get_deletion_mechanism)
+export(get_valid_chromosomes)
 importFrom(magrittr,"%>%")
