--- a/src/R/pcgrr/NAMESPACE
+++ b/src/R/pcgrr/NAMESPACE
@@ -6,6 +6,12 @@ export(plot_value_boxes)
 export(tier_to_maf)
 export(add_filter_read_support)
 export(add_swissprot_feature_descriptions)
+export(determine_genotype)
+export(get_population_tag)
+export(get_insilico_prediction_statistics)
+export(assign_pathogenicity_score)
+export(generate_tier_tsv_cpsr)
+export(summary_findings_cpsr)
 
 export(annotate_variant_link)
 export(generate_annotation_link)
@@ -29,6 +35,7 @@ export(generate_report_data_cna)
 export(generate_report_data_tumor_only)
 export(generate_report_data_value_box)
 export(generate_report)
+export(annotate_facets_cna)
 
 export(generate_predisposition_report)
 
