--- a/src/R/pcgrr/NAMESPACE
+++ b/src/R/pcgrr/NAMESPACE
@@ -6,6 +6,7 @@ export(plot_value_boxes)
 export(tier_to_maf)
 export(add_filter_read_support)
 export(add_swissprot_feature_descriptions)
+export(add_gwas_citation_phenotype)
 export(determine_genotype)
 export(get_population_tag)
 export(get_insilico_prediction_statistics)
