--- a/install_no_docker/conda_environment.yml
+++ b/install_no_docker/conda_environment.yml
@@ -41,6 +41,7 @@ dependencies:
   - pandoc==2.3.1
   - r-base==3.4.1
   - bioconductor-biocinstaller
+  - libgfortran-ng  # to fix -libgfortran error, thanks @pdiakumis
   - r-purrr>=0.2.4  # to force the one from conda-forge to address this issue https://github.com/jbkunst/highcharter/issues/285
   - r-dplyr
   - r-devtools
